fix(buttons): fixed icons link in projects page due to overlapping class names

--- a/pages/projects-page/assets/css/style.css
+++ b/pages/projects-page/assets/css/style.css
@@ -100,12 +100,25 @@ nav ul li a:hover {
     margin-top: 20px;
 }
 
-.icons i:visited {
+.icons-f i{
+    color: #ffffff;
+    font-size: 2em;
+    margin: 0 15px;
+}
+
+.icons-f i:visited {
+    font-size: 2em;
+    margin: 0 15px;
     color: #ffffff;
 }
 
+.icons-f i:hover {
+    color: #0288d1;
+    transition: color 0.7s;
+    cursor: pointer;
+}
+
 .icons i {
-    color: #ffffff;
     font-size: 2em;
     margin: 0 15px;
 }
@@ -127,7 +140,6 @@ nav ul li a:hover {
 }
 
 .icon-box i {
-    color: #000000;
     font-size: 15em; 
     margin-bottom: 10px;
 }
